--- a/DRUMToolsDspace7.ipynb
+++ b/DRUMToolsDspace7.ipynb
@@ -3,11 +3,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/mkernik/drum_tools/blob/main/DRUMToolsDspace7.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/UMNDataRepo/drum_tools/blob/main/DRUMToolsDspace7.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -26,6 +26,7 @@
         "*   Melinda Kernik, University of Minnesota Libraries (original notebook, Dspace7 revisions)\n",
         "*   Valerie Collins, University of Minnesota Libraries (original notebook)\n",
         "*   Kent Gerber, University of Minnesota Libraries, University Archives (Dspace7 revisions)\n",
+        "*   Haniya Abuad, University of Minnesota (Dpace7 revisions)\n",
         "\n",
         "**Contact**: datarepo@umn.edu\n",
         "\n",
@@ -125,12 +126,12 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "ffpu_C3fW9Dn"
-      },
       "source": [
         "Use link provided to request information from the API"
-      ]
+      ],
+      "metadata": {
+        "id": "ffpu_C3fW9Dn"
+      }
     },
     {
       "cell_type": "code",
@@ -439,20 +440,15 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "xBbLm5VYWcYM"
-      },
       "source": [
         "Use link provided to request information from the API"
-      ]
+      ],
+      "metadata": {
+        "id": "xBbLm5VYWcYM"
+      }
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "NZpmZ_DMWSTO"
-      },
-      "outputs": [],
       "source": [
         "#Take the input entered by the notebook user and extract the item_uuid\n",
         "drum_url_split = link_url.split (\"/\") [-2:]\n",
@@ -469,20 +465,25 @@
         "#Construct the link to the API endpoint\n",
         "item_url = \"https://conservancy.umn.edu/server/api/core/items/\" + item_uuid\n",
         "print (item_url)"
-      ]
+      ],
+      "metadata": {
+        "id": "NZpmZ_DMWSTO"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "sBoyG4x7Wa20"
-      },
-      "outputs": [],
       "source": [
         "#Request information from the API\n",
         "response = requests.get(item_url)\n",
         "itemData = response.json()"
-      ]
+      ],
+      "metadata": {
+        "id": "sBoyG4x7Wa20"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -672,10 +673,7 @@
       },
       "outputs": [],
       "source": [
-        "if \"dc.description.abstract\" in itemData['metadata']:\n",
-        "  metadata_dict ['abstract'] = itemData['metadata']['dc.description.abstract'][0]['value']\n",
-        "else:\n",
-        "   print(\"No abstract provided\")\n",
+        "metadata_dict ['abstract'] = itemData['metadata']['dc.description.abstract'][0]['value']\n",
         "\n",
         "if 'dc.description.sponsorship' in itemData['metadata']:\n",
         "    funders_string = \"\"\n",
@@ -730,7 +728,7 @@
       },
       "outputs": [],
       "source": [
-        "###Optional item. It is present if researcher submitted a reference to the \"Referenced By\" field, but often is not added to the record\n",
+        "###Is this element no longer included in Dspace7 or is it just missing for this specific item?  Test it against an example!\n",
         "try:\n",
         "  publication_string = \"\"\n",
         "  for x in range(len(itemData['metadata']['dc.relation.isreferencedby'])):\n",
@@ -1007,12 +1005,12 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "cRgAu3X6YO_S"
-      },
       "source": [
         "Use link provided to request information from the API"
-      ]
+      ],
+      "metadata": {
+        "id": "cRgAu3X6YO_S"
+      }
     },
     {
       "cell_type": "code",
@@ -1310,9 +1308,6 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "SLXD93h5vgJU"
-      },
       "source": [
         "# Known Issues and Limitations\n",
         "\n",
@@ -1324,7 +1319,10 @@
         "DRUM curators can find a full list of known issues and limitations with these tools for our workflows in [this Google Drive document](https://docs.google.com/document/d/1qK53v7_k43M9pWDCw2e2cLF18lGL8U9LhBr0QU2MhME/).\n",
         "\n",
         "If you encounter any errors or have requests for new functionality, please add them to the document!"
-      ]
+      ],
+      "metadata": {
+        "id": "SLXD93h5vgJU"
+      }
     }
   ],
   "metadata": {
@@ -1334,8 +1332,8 @@
         "paIHFYOS8Kui",
         "UdhPrYrsBJoY"
       ],
-      "include_colab_link": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
