Fixed author section of ReadMe.

--- a/DRUMToolsDspace7.ipynb
+++ b/DRUMToolsDspace7.ipynb
@@ -588,14 +588,21 @@
         "\n",
         "author_string = \"\"\n",
         "for author in authors_list:\n",
+        "    # Check if the author name has a comma\n",
+        "    if \",\" in author:\n",
         "    #Rearrange author name to be First Last instead of Last, First\n",
-        "    author_split = author.split (\",\") [:]\n",
-        "    author_firstLast = author_split[1] + \" \" + author_split[0]\n",
+        "      author_split = author.split (\",\") [:]\n",
+        "      author_firstLast = author_split[1] + \" \" + author_split[0]\n",
+        "    else:\n",
+        "        author_firstLast = author\n",
+        "    #Check if they have ORCID associated.\n",
+        "   # orcid = orcid_dict.get(author, \"No ORCID\")\n",
+        "\n",
         "    #If the author is the contact person, add their email address. If not, leave email blank.\n",
         "    if author == contact_name:\n",
-        "        author_string += \"\\n\\tName: \" + author_firstLast + \"\\n\\tInstitution:\\n\\tEmail: \" + contact_email + \"\\n\\tORCID:\\n\\n\"\n",
+        "        author_string += \"\\n\\tName: \" + author_firstLast + \"\\n\\tInstitution:\\n\\tEmail: \" + contact_email + \"\\n\\tORCID: {orcid}\\n\\n\"\n",
         "    else:\n",
-        "        author_string += \"\\n\\tName: \" + author_firstLast + \"\\n\\tInstitution:\\n\\tEmail:\\n\\tORCID:\\n\\n\"\n",
+        "        author_string += \"\\n\\tName: \" + author_firstLast + \"\\n\\tInstitution:\\n\\tEmail:\\n\\tORCID: {orcid}\\n\\n\"\n",
         "metadata_dict ['authors'] = author_string"
       ]
     },
