Fixed author in xml v2

--- a/DRUMToolsDspace7.ipynb
+++ b/DRUMToolsDspace7.ipynb
@@ -1102,18 +1102,30 @@
         "\n",
         "author_string = \"\"\n",
         "for author in authors_list:\n",
+        "  #Checking if there is a comma in the author name\n",
+        "  if \",\" in author:\n",
         "    #print (author)\n",
         "    #Rearrange author name to be First Last instead of Last, First\n",
         "    author_split = author.split (\",\") [:]\n",
         "    author_first = author_split[1]\n",
         "    author_last = author_split[0].strip()\n",
+        "\n",
         "    #loop through authors and append each new XML <creator> block to author_string\n",
-        "    author_string += \"\"\"\n",
+        "    author_string += f\"\"\"\n",
         "<creator>\n",
         "  <creatorName nameType=\"Personal\">\"\"\" + author + \"\"\"</creatorName>\n",
         "  <givenName>\"\"\" + author_first + \"\"\"</givenName>\n",
         "  <familyName>\"\"\" + author_last + \"\"\"</familyName>\n",
         "</creator>\"\"\"\n",
+        "\n",
+        "  else:\n",
+        "    author_first = \"\"\n",
+        "    author_last = author\n",
+        "    author_string += f\"\"\"\n",
+        "<creator>\n",
+        "  <creatorName xml:lang=\"en\" nameType=\"Organizational\">{author_last}</creatorName>\n",
+        "</creator>\"\"\"\n",
+        "\n",
         "# There is a way to add affiliation within the creator tags in Datacite Metadata schema\n",
         "#It would go under <familyName> and above <creator>\n",
         "# <affiliation affiliationIdentifier=\"https://ror.org/017zqws13\" affiliationIdentifierScheme=\"ROR\" schemeURI=\"https://ror.org\">University of Minnesota</affiliation>"
@@ -1334,6 +1346,7 @@
     "colab": {
       "collapsed_sections": [
         "so6QvmLx5EYm",
+        "paIHFYOS8Kui",
         "UdhPrYrsBJoY"
       ],
       "provenance": [],
