Updated the code references to the dc.date.available field to dc.date.accessioned to update the function for DSpace9

--- a/DRUMToolsDspace7.ipynb
+++ b/DRUMToolsDspace7.ipynb
@@ -16,16 +16,16 @@
         "id": "4AlbJY363rFp"
       },
       "source": [
-        "# Automation Tools for DRUM Curators (DSpace7)\n",
+        "# Automation Tools for DRUM Curators (DSpace9)\n",
         "\n",
         "\n",
         "---\n",
         "\n",
         "**Contributions by:**\n",
         "\n",
-        "*   Melinda Kernik, University of Minnesota Libraries (original notebook, Dspace7 revisions)\n",
+        "*   Melinda Kernik, University of Minnesota Libraries (original notebook, DSpace7 revisions)\n",
         "*   Valerie Collins, University of Minnesota Libraries (original notebook)\n",
-        "*   Kent Gerber, University of Minnesota Libraries, University Archives (Dspace7 revisions)\n",
+        "*   Kent Gerber, University of Minnesota Libraries, University Archives (DSpace7 and DSpace9 revisions)\n",
         "*   Haniya Abuad, University of Minnesota (Dpace7 revisions)\n",
         "\n",
         "**Contact**: datarepo@umn.edu\n",
@@ -189,7 +189,7 @@
       "source": [
         "title = itemData['name']\n",
         "handle_uri = itemData['metadata']['dc.identifier.uri'][0]['value']\n",
-        "date_split = itemData['metadata']['dc.date.available'][0]['value'].split(\"T\")\n",
+        "date_split = itemData['metadata']['dc.date.accessioned'][0]['value'].split(\"T\")\n",
         "date_available = date_split[0]\n",
         "handle_split = handle_uri.split (\"/\") [-2:]"
       ]
@@ -642,7 +642,7 @@
       "outputs": [],
       "source": [
         "#Split the date field and use only YYYYMMDD, not exact time\n",
-        "date_split = itemData['metadata']['dc.date.available'][0]['value'].split(\"T\")\n",
+        "date_split = itemData['metadata']['dc.date.accessioned'][0]['value'].split(\"T\")\n",
         "metadata_dict ['date_published'] = date_split[0]\n",
         "#Isolate the year published to use in the Readme filename\n",
         "year_split = date_split[0].split(\"-\")\n",
@@ -1151,7 +1151,7 @@
         "###Should this be calculated differently?\n",
         "publication_year = str(datetime.now().strftime(\"%Y\"))\n",
         "\n",
-        "date_available = itemData['metadata']['dc.date.available'][0]['value']"
+        "date_available = itemData['metadata']['dc.date.accessioned'][0]['value']"
       ]
     },
     {
